# scMorphJEPA

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  cell_jepa.py  cell_jepa_train.py  pyproject.toml  severin_dataset.py
.github/workflows/: ci.yml
configs/: severin.yaml
notebooks/: cell-JEPA.ipynb
results/: results_log.txt
scmorphjepa/: __init__.py  cli.py
scmorphjepa/analysis/: __init__.py  boundary_analyzer.py  cluster_profiler.py  embedding_bridge.py  feature_extractors.py  interpretability.py
scmorphjepa/data/: __init__.py  datasets.py
scmorphjepa/evaluation/: __init__.py  evaluate.py
scmorphjepa/models/: __init__.py  baselines.py  builder.py  cell_jepa.py
scmorphjepa/training/: __init__.py  regularizers.py  trainer.py
tests/: test_scmorphjepa.py
