[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scmorphjepa"
version = "0.1.11"
description = "scMorphJEPA: Self-supervised cell morphology learning via spatial JEPA + SIGReg"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Simone Bonaccorsi"}]
keywords = ["self-supervised-learning", "cell-morphology", "jepa", "fluorescence-microscopy",
            "vision-transformer", "computational-biology", "phenomics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0", "torchvision>=0.15", "timm>=0.9", "tifffile>=2023.0",
    "scikit-learn>=1.3", "scikit-image>=0.21", "umap-learn>=0.5",
    "leidenalg>=0.10", "python-igraph>=0.11", "hdbscan>=0.8",
    "plotly>=5.18", "jinja2>=3.1", "pandas>=2.0", "numpy>=1.24",
    "matplotlib>=3.7", "pyyaml>=6.0", "tqdm>=4.65", "scipy>=1.10",
]

[project.optional-dependencies]
shap = ["shap>=0.43"]
wandb = ["wandb>=0.16"]
dev = ["pytest>=7.4", "ruff>=0.1"]

[project.urls]
Repository = "https://github.com/simo1946/scMorphJEPA"

[tool.setuptools.packages.find]
include = ["scmorphjepa*"]

[tool.ruff]
line-length = 100
target-version = "py39"
